# ladder_app02

./: .gitattributes  .gitignore  MACOS_BUILD_INSTRUCTIONS.md  WINDOWS_BUILD_READY.md  WINDOWS_DOWNLOAD.md
.github/workflows/: build-macos-daemon.yml  build-macos.yml
dydx_numero/v4-clients/v4-client-rs/: Cargo.toml
dydx_numero/v4-clients/v4-client-rs/client/: Cargo.toml
dydx_numero/v4-clients/v4-client-rs/client/examples/: websockets.rs
dydx_numero/v4-clients/v4-client-rs/ladder_app/: Cargo.toml
dydx_numero/v4-clients/v4-client-rs/ladder_app/src/: main.rs
dydx_numero/v4-clients/v4-client-rs/ladder_app02/: .gitattributes  Cargo.toml  ORDER_TYPES.md  README.md  TODO.md  WORKDAY_SUMMARY.md  cargo_clean_manager.sh  install_data_daemon02.zsh
dydx_numero/v4-clients/v4-client-rs/ladder_app02/.cargo/: config.toml
dydx_numero/v4-clients/v4-client-rs/ladder_app02/.github/workflows/: ci.yml
dydx_numero/v4-clients/v4-client-rs/ladder_app02/data/: settings.conf
dydx_numero/v4-clients/v4-client-rs/ladder_app02/releases/optimization_two/: data_daemon02_linux
dydx_numero/v4-clients/v4-client-rs/ladder_app02/releases/windows_20260120/: README.md
dydx_numero/v4-clients/v4-client-rs/ladder_app02/src/: candle_agg.rs  candles.rs  cycle_manager.rs  debug_hooks.rs  feed_shared.rs  keplr_bridge.rs  lib.rs  main.rs  persist.rs  scratch01.rs  settings.rs  signer.rs  trade_engine.rs
dydx_numero/v4-clients/v4-client-rs/ladder_app02/src/app/: commands.rs  event.rs  mod.rs  reducer.rs  render.rs  state.rs
dydx_numero/v4-clients/v4-client-rs/ladder_app02/src/exec/: engine.rs  types.rs
dydx_numero/v4-clients/v4-client-rs/ladder_app02/src/feed/: daemon.rs  dummy.rs  mod.rs
dydx_numero/v4-clients/v4-client-rs/ladder_app02/ui/: appwindow.slint
egui_tests/: test01.rs  test02.rs  websockets_save.rs
jsons/: untitled01.json
releases/: ladder_app02-macos-intel
